// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is a value 1`] = `
<div
  className="sui-sorting"
>
  <e
    caretIcon={<DownChevron />}
    key="sorting_select_[object Object]"
    name="select"
    onChange={[Function]}
    options={
      Array [
        Object {
          "name": "Name ASC",
          "value": "name|||asc",
        },
        Object {
          "name": "Name DESC",
          "value": "name|||desc",
        },
      ]
    }
    selectedValue="name|||desc"
  />
</div>
`;

exports[`renders correctly when there is not a value 1`] = `
<div
  className="sui-sorting"
>
  <e
    caretIcon={<DownChevron />}
    key="sorting_select_null"
    name="select"
    onChange={[Function]}
    options={
      Array [
        Object {
          "name": "Name ASC",
          "value": "name|||asc",
        },
        Object {
          "name": "Name DESC",
          "value": "name|||desc",
        },
      ]
    }
    selectedValue={null}
  />
</div>
`;
